Updated Get Started Quick Guide (markdown)